--- a/WebContent/app/views/partials/insertPosition.html
+++ b/WebContent/app/views/partials/insertPosition.html
@@ -33,6 +33,6 @@
          	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
            		<span aria-hidden="true">&times;</span>
          	</button>
-        		<strong>{{lang.saved}}!</strong> {{lang.confirmPosition}} <strong id="location_modal"></strong>
+        		<strong id="saved">{{lang.saved}}</strong>  <strong id="location_modal"></strong>
      	</div>
 </script>
