--- a/WebContent/app/views/auth/register.html
+++ b/WebContent/app/views/auth/register.html
@@ -1,7 +1,7 @@
 
 <div class="row">
 	<div class="col-md-6 row form-styled">
-		<form action="/register" method="post">
+		<form action="{{contextPath + '/register'}}" method="post">
 			<div class="form-group">
 				<label for="email">Email </label> <input type="email" class="form-control required" name="email" placeholder="Enter email">
 			</div>
