--- a/WebContent/app/views/auth/registerTutor.html
+++ b/WebContent/app/views/auth/registerTutor.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-6 row form-styled">
-		<form action="/registertutor" method="post" id="form" >
+		<form action="{{contextPath + '/registertutor'}}" method="post" id="form" >
 			<div class="form-group">
 				<label for="email">Email </label> <input type="email" class="form-control required" name="email" placeholder="Enter email">
 			</div>
